resources/assets/src/app/components/home/home.component.scss
@import '../../../styles/colors';
@import '../../../styles/mixins';

::ng-deep body {
    // Ensure the background covers the entire viewport at any zoom
    background-color: #333333;
    background-image: url('/assets/img/home_background_darkened.jpg');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

::ng-deep body .qc-home-page {
    background: transparent; // Let the body background show through
    padding: 50px 20px;     // Mobile padding

    @include respond-to('medium') {
        padding: 150px 30px; // Desktop padding
    }

    h1, h2 { color: $white; }

    h1 {
        font-size: 2em; 
        font-weight: 700;
        margin-bottom: 15px;

        @include respond-to('medium') {
            font-size: 3em;
        }
    }

    .qc-hero-add-btn {
        background-color: $thirty-percent-opaque;
        border: solid $white 3px;
        border-radius: 20px;
        color: $white;
        font-family: 'BentonSans';
        font-size: 2em;
        padding: 30px;
        width: 100%;       // Full width on mobile/high zoom
        margin-top: 40px;  // Space below nav
        white-space: normal;
        text-transform: uppercase;
        font-weight: 300;

        @include respond-to('medium') {
            font-size: 3.5em;
            padding: 35px;
            width: auto;   // Shrink to fit text on desktop
            margin-top: 100px;
        }

        &:hover, &:focus {
            background-color: $seventy-percent-opaque;
            border-color: $electric-blue-lighter !important;
        }
    }

    .qc-home-add-panel {
        padding: 30px;
        margin-top: 50px;

        h2 {
            color: $black;
            text-transform: uppercase;
        }
    }
}

